--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/dynamic_data_lists/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/dynamic_data_lists/css/rtl/main.css
@@ -17,7 +17,7 @@
 		border: {
 			color: #CCC;
 			style: solid;
-			width: 0 1px 1px 0;
+			width: 0 0 1px 1px;   /*rtl*/
 		}
 		outline: 0;
 	}
@@ -51,7 +51,7 @@
 	z-index: 999 !important;
 
 	.aui-buttonitem-content {
-		padding:3px 1px 2px 3px;
+		padding: 3px 1px 2px 3px;   /*rtl*/
 	}
 
 	[class~="aui-form-validator-message"] {
