--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/dynamic_data_mapping/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/dynamic_data_mapping/css/rtl/main.css
@@ -35,11 +35,11 @@
 	}
 
 	.lfr-ddm-types-form-column .aui-column-content-first {
-		margin-left: 10px;
+		margin-left: 10px;   /*rtl*/
 	}
 
 	.lfr-ddm-search-form .aui-column {
-		margin-left: 10px;
+		margin-left: 10px;   /*rtl*/
 	}
 
 	.lfr-template-editor {
