--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/polls/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/polls/css/rtl/main.css
@@ -6,12 +6,12 @@
 
 	.choice {
 		label {
-			float: right;
-			margin: 0.5em 0.5em 0 0;
+			float: right;   /*rtl*/
+			margin: 0.5em 0 0 0.5em;   /*rtl*/
 		}
 
 		.aui-field {
-			float: right;
+			float: right;   /*rtl*/
 		}
 	}
 }
