--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/sites_admin/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/sites_admin/css/rtl/main.css
@@ -1,6 +1,6 @@
 .portlet-site-settings {
 	.staging-section {
-		margin-right: 1.5em;
+		margin-right: 1.5em;   /*rtl*/
 	}
 
 	.staging-types .aui-field-choice label {
