--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/user_statistics/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/user_statistics/css/rtl/main.css
@@ -13,7 +13,7 @@
 
 			.page-links {
 				float: none;
-				text-align: right;
+				text-align: right;   /*rtl*/
 
 				.previous {
 					border-width: 0;
