--- a/hooks/bidi-hook/docroot/custom_jsps/html/themes/classic/css/rtl/custom_common.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/themes/classic/css/rtl/custom_common.css
@@ -45,7 +45,7 @@
 /* ---------- Hidden Accessible ---------- */
 
 #skip-to-content, #banner h2, #banner h3, #navigation h1, .site-breadcrumbs h1 {
-	clip: rect(0 0 0 0);
+	clip: rect(0 0 0 0);   /*rtl*/
 	position: absolute;
 }
 
