--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/blogs_aggregator/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/blogs_aggregator/css/rtl/main.css
@@ -15,36 +15,36 @@
 	}
 
 	.entry-author {
-		background: url(@theme_image_path@/rtl/portlet/edit_guest.png) no-repeat right 50%;
-		border-left: 1px solid #999;
+		background: url(@theme_image_path@/rtl/portlet/edit_guest.png) no-repeat right 50%;   /*rtl*/
+		border-left: 1px solid #999;   /*rtl*/
 		color: #999;
-		float: right;
+		float: right;   /*rtl*/
 		font-weight: bold;
-		margin-left: 10px;
-		padding-right: 20px;
-		padding-left: 10px;
+		margin-left: 10px;   /*rtl*/
+		padding-right: 20px;   /*rtl*/
+		padding-left: 10px;   /*rtl*/
 	}
 
 	.entry-categories {
-		border-right: 1px solid #999;
-		float: right;
-		padding-right: 10px;
+		border-right: 1px solid #999;   /*rtl*/
+		float: right;   /*rtl*/
+		padding-right: 10px;   /*rtl*/
 	}
 
 	.entry-date {
-		background: url(@theme_image_path@/rtl/common/date.png) no-repeat right 50%;
+		background: url(@theme_image_path@/rtl/common/date.png) no-repeat right 50%;   /*rtl*/
 		color: #999;
-		float: right;
+		float: right;   /*rtl*/
 		overflow: hidden;
-		padding-right: 25px;
-		padding-left: 10px;
+		padding-right: 25px;   /*rtl*/
+		padding-left: 10px;   /*rtl*/
 	}
 
 	.entry-tags {
-		border-right: 1px solid #999;
+		border-right: 1px solid #999;   /*rtl*/
 		overflow: hidden;
-		padding-right: 10px;
-		padding-left: 10px;
+		padding-right: 10px;   /*rtl*/
+		padding-left: 10px;   /*rtl*/
 	}
 
 	.entry-title {
