--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/bookmarks/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/bookmarks/css/rtl/main.css
@@ -4,8 +4,8 @@
 	}
 
 	.folder-search {
-		float: left;
-		margin: 0 0 0.5em 0.5em;
+		float: left;   /*rtl*/
+		margin: 0 0.5em 0.5em 0;   /*rtl*/
 	}
 
 	.lfr-panel-content {
