--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/calendar/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/calendar/css/rtl/main.css
@@ -1,6 +1,6 @@
 .portlet-calendar {
 	.calendar-container {
-		background: #fff url(@theme_image_path@/rtl/calendar/calendar_day_drop_shadow.png) repeat-x right 99%;
+		background: #fff url(@theme_image_path@/rtl/calendar/calendar_day_drop_shadow.png) repeat-x right 99%;   /*rtl*/
 		border: 1px solid #D7D7D7;
 		width: 400px;
 	}
@@ -20,7 +20,7 @@
 	}
 
 	.calendar-day {
-		float: right;
+		float:left;
 		text-align: center;
 		width: 209px;
 
@@ -36,18 +36,11 @@
 		.day-number {
 			border: 1px solid #fff;
 			border-bottom-width: 0;
-			font-size: 92px;
+			font-size: 110px;
 			font-weight: normal;
 			line-height: 1.2;
 			margin: 0;
-			/*padding-bottom: 5px;*/
-			vertical-align: middle;
-
-		}
-
-		.day-month {
-			font-size: 1.8em;
-			font-weight: normal;
+			padding-bottom: 5px;
 			vertical-align: middle;
 
 		}
@@ -61,12 +54,12 @@
 
 	.calendar-container .taglib-calendar {
 		background: #fff;
-		border-right: 1px solid #D7D7D7;
+		border-right: 1px solid #D7D7D7;   /*rtl*/
 		clear: none;
-		float: left;
+		float: left;   /*rtl*/
 		margin-bottom: 0;
-		margin-right: -1px;
-		padding-right: 0;
+		margin-right: -1px;   /*rtl*/
+		padding-right: 0;   /*rtl*/
 
 		table {
 			border-width: 0;
@@ -86,11 +79,11 @@
 	.taglib-calendar {
 		table {
 			.first {
-				border-right-width: 0;
+				border-right-width: 0;   /*rtl*/
 			}
 
 			.last {
-				border-left-width: 0;
+				border-left-width: 0;   /*rtl*/
 			}
 		}
 
@@ -120,7 +113,7 @@
 
 	.day-grid {
 		border-top: 2px solid #CCC;
-		margin-right: 50px;
+		margin-right: 50px;   /*rtl*/
 
 		.business-hour {
 			background: #FEFEFE;
@@ -146,9 +139,9 @@
 			display: block;
 			font-size: 0.8em;
 			font-weight: bold;
-			right: -50px;
+			right: -50px;   /*rtl*/
 			position: absolute;
-			text-align: left;
+			text-align: left;   /*rtl*/
 			width: 45px;
 		}
 
@@ -180,7 +173,7 @@
 	}
 
 	.event-duration-hour {
-		float: right;
+		float: right;   /*rtl*/
 	}
 
 	.folder-icon {
@@ -197,16 +190,16 @@
 	}
 
 	.property-list {
-		margin-right: 0;
+		margin-right: 0;   /*rtl*/
 		margin-top: 0;
 		overflow: hidden;
 		padding: 0;
 
 		dd {
-			float: right;
+			float: right;   /*rtl*/
 			line-height: 1.5;
 			margin: 0;
-			padding-right: 5px;
+			padding-right: 5px;   /*rtl*/
 
 			img {
 				vertical-align: middle;
@@ -214,7 +207,7 @@
 		}
 
 		dt {
-			clear: right;
+			clear: right;   /*rtl*/
 			font-weight: bold;
 			min-width: 5em;
 		}
@@ -242,7 +235,7 @@
 .ie {
 	.portlet-calendar {
 		.calendar-container {
-			background-position: right 98%   /*rtl*/
+			background-position: 0 98%;
 		}
 	}
 }
@@ -255,9 +248,9 @@
 
 		.taglib-calendar {
 			background: none;
-			border-right: 1px solid;
-			margin-right: 0;
-			padding-right: 0;
+			border-right: 1px solid;   /*rtl*/
+			margin-right: 0;   /*rtl*/
+			padding-right: 0;   /*rtl*/
 			width: 189px;
 		}
 	}
