--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/document_library_display/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/document_library_display/css/rtl/main.css
@@ -17,7 +17,7 @@
 
 	.file-entry-list-description {
 		font-style: italic;
-		margin-right: 10px;
+		margin-right: 10px;   /*rtl*/
 	}
 
 	.file-entry-tags {
@@ -25,17 +25,17 @@
 	}
 
 	.folder-search {
-		float: left;
-		margin: 0 0 0.5em 0.5em;
+		float: left;   /*rtl*/
+		margin: 0 0.5em 0.5em 0;   /*rtl*/
 	}
 
 	.entry-thumbnail {
-		float: right;
-		margin-left: 1em;
+		float: right;   /*rtl*/
+		margin-left: 1em;   /*rtl*/
 		position: relative;
 
 		.thumbnail {
-			float: right;
+			float: right;   /*rtl*/
 			max-height: 128px;
 			max-width: 128px;
 		}
