--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/search/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/search/css/rtl/main.css
@@ -4,10 +4,10 @@
 	}
 
 	.menu-column .search-layout-content {
-		padding-right: 24em;
+		padding-right: 24em;   /*rtl*/
 
 		.menu {
-			margin-right: -24em;
+			margin-right: -24em;   /*rtl*/
 			position: relative;
 			width: 24em;
 		}
@@ -50,13 +50,13 @@
 				.facet-value {
 					font-size: 1.1em;
 					padding: 3px;
-					padding-left: 0;
+					padding-left: 0;   /*rtl*/
 
 					a {
 						text-decoration: none;
 
 						img {
-							margin-left: 8px;
+							margin-left: 8px;   /*rtl*/
 							vertical-align: middle;
 						}
 					}
@@ -70,7 +70,7 @@
 							color: #FFF;
 
 							img {
-								margin-left: 8px;
+								margin-left: 8px;   /*rtl*/
 							}
 						}
 
@@ -90,14 +90,14 @@
 				}
 
 				.modified-custom-range {
-					padding-right: 10px;
+					padding-right: 10px;   /*rtl*/
 
 					.aui-field-content {
 						margin: 5px 0;
 					}
 
 					.aui-button {
-						margin-left: 5px;
+						margin-left: 5px;   /*rtl*/
 					}
 				}
 
@@ -134,9 +134,9 @@
 				}
 
 				.asset-entry-categories, .asset-entry-tags {
-					float: right;
+					float: right;   /*rtl*/
 					margin-bottom: 0.5em;
-					padding-left: 6px;
+					padding-left: 6px;   /*rtl*/
 				}
 
 				.asset-entry-fields {
@@ -194,14 +194,14 @@
 				}
 
 				.asset-entry-type {
-					float: left;
+					float: left;   /*rtl*/
 					font-size: 0.8em;
 					color: #777;
 				}
 
 				.toggle-details {
 					cursor: pointer;
-					float: right;
+					float: right;   /*rtl*/
 					font-family: monospace;
 					font-weight: bold;
 				}
@@ -229,7 +229,7 @@
 		color: #777;
 		margin: 15px 0;
 		padding: 2px 5px;
-		text-align: left;
+		text-align: left;   /*rtl*/
 	}
 
 	.search-paginator-container {
@@ -243,8 +243,8 @@
 	}
 
 	.taglib-asset-categories-summary .asset-vocabulary {
-		background: url(@theme_image_path@/rtl/common/folder.png) no-repeat right 50%;
-		padding:2px 20px 2px 5px;
+		background: url(@theme_image_path@/rtl/common/folder.png) no-repeat right 50%;   /*rtl*/
+		padding: 2px 20px 2px 5px;   /*rtl*/
 	}
 }
 
