--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/staging_bar/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/staging_bar/css/rtl/main.css
@@ -6,10 +6,10 @@
 	}
 
 	.manage-layout-branches-tab {
-		margin-right: 1em;
+		margin-right: 1em;   /*rtl*/
 
 		&.aui-tab-label {
-			margin-right: 0;
+			margin-right: 0;   /*rtl*/
 		}
 	}
 
@@ -75,11 +75,11 @@
 		}
 
 		.manage-layout-set-branches-tab .manage-layout-set-branches a {
-			border-right: 1px solid #999;
+			border-right: 1px solid #999;   /*rtl*/
 			color: #DDD;
 			font-size: 0.9em;
-			margin-right: 10px;
-			padding-right: 10px;
+			margin-right: 10px;   /*rtl*/
+			padding-right: 10px;   /*rtl*/
 			text-decoration: none;
 
 			.taglib-text {
@@ -110,7 +110,7 @@
 
 		a {
 			display: block;
-			float: left;
+			float: left;   /*rtl*/
 			min-height: 15px;
 		}
 
@@ -120,7 +120,7 @@
 
 			a {
 				background-image: url(@theme_image_path@/rtl/arrows/06_down.png);
-				background-position: right 4px   /*rtl*/
+				background-position: 0 4px;
 				padding: 0 5px;
 				opacity: 0.5;
 			}
@@ -172,8 +172,8 @@
 			padding: 0.5em 1em;
 
 			.staging-icon {
-				float: right;
-				margin-left: 1em;
+				float: right;   /*rtl*/
+				margin-left: 1em;   /*rtl*/
 			}
 
 			.layout-set-branch-info {
@@ -182,13 +182,13 @@
 				text-indent: -0.5em;
 
 				.layout-set-branch-description {
-					border-left: 1px solid #AAA;
+					border-left: 1px solid #AAA;   /*rtl*/
 					padding: 0 0.5em 0;
 					font-style: italic;
 				}
 
 				.layout-set-branch-pages {
-					padding-right: 0.5em;
+					padding-right: 0.5em;   /*rtl*/
 				}
 			}
 
@@ -210,7 +210,7 @@
 					}
 
 					.layout-actions, .layout-revision-details {
-						float: right;
+						float: right;   /*rtl*/
 					}
 
 					.layout-revision-id {
@@ -222,7 +222,7 @@
 					font-size: 1.2em;
 
 					.layout-title-label {
-						float: right;
+						float: right;   /*rtl*/
 					}
 
 					.layout-breadcrumb {
@@ -235,7 +235,7 @@
 						.breadcrumbs-horizontal {
 							margin-bottom: 0;
 							overflow: hidden;
-							padding-right: 0.5em;
+							padding-right: 0.5em;   /*rtl*/
 
 							li {
 								background-image: url(@theme_image_path@/rtl/arrows/09_right.png);
@@ -254,30 +254,30 @@
 			}
 
 			.last-publication-user {
-				background: url(@theme_image_path@/rtl/common/time.png) no-repeat right 50%;
-				padding-right: 20px;
+				background: url(@theme_image_path@/rtl/common/time.png) no-repeat right 50%;   /*rtl*/
+				padding-right: 20px;   /*rtl*/
 			}
 
 			.last-publication-variation-details {
 				font-size: 0.8em;
 
 				.layout-version {
-					background: url(@theme_image_path@/rtl/common/pages.png) no-repeat right 50%;
-					padding:2px 20px 2px 0;
+					background: url(@theme_image_path@/rtl/common/pages.png) no-repeat right 50%;   /*rtl*/
+					padding: 2px 20px 2px 0;   /*rtl*/
 				}
 
 				.variation-name {
-					background: url(@theme_image_path@/rtl/common/signal_instance.png) no-repeat right 50%;
-					margin-left: 10px;
-					padding:2px 20px 2px 0;
+					background: url(@theme_image_path@/rtl/common/signal_instance.png) no-repeat right 50%;   /*rtl*/
+					margin-left: 10px;   /*rtl*/
+					padding: 2px 20px 2px 0;   /*rtl*/
 				}
 			}
 
 			.taglib-workflow-status {
-				clear: right;
+				clear: right;   /*rtl*/
 				color: #FFF;
-				float: right;
-				margin-left: 5em;
+				float: right;   /*rtl*/
+				margin-left: 5em;   /*rtl*/
 
 				.workflow-status, .workflow-version {
 					color: #FFF;
@@ -303,8 +303,8 @@
 			}
 
 			.layout-revision-toolbar {
-				float: right;
-				padding-right: 1em;
+				float: right;   /*rtl*/
+				padding-right: 1em;   /*rtl*/
 			}
 		}
 	}
