--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/wiki/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/wiki/css/rtl/main.css
@@ -25,17 +25,17 @@
 
 		li.toclevel-1 {
 			list-style-type: none;
-			margin-right: 0;
+			margin-right: 0;   /*rtl*/
 		}
 
 		li.toclevel-2 {
 			list-style-type: none;
-			margin-right: 15px;
+			margin-right: 15px;   /*rtl*/
 		}
 
 		li.toclevel-3 {
 			list-style-type: none;
-			margin-right: 30px;
+			margin-right: 30px;   /*rtl*/
 		}
 	}
 
@@ -90,8 +90,8 @@
 	}
 
 	.portlet-body h1.page-title .return-to-page {
-		background: url(@theme_image_path@/rtl/wiki/return_to_page.png) no-repeat right 50%;
-		padding-right: 20px;
+		background: url(@theme_image_path@/rtl/wiki/return_to_page.png) no-repeat right 50%;   /*rtl*/
+		padding-right: 20px;   /*rtl*/
 		text-decoration: none;
 	}
 
@@ -144,22 +144,22 @@
 	}
 
 	.content-body .code-lines {
-		border-left: 1px solid #ccc;
+		border-left: 1px solid #ccc;   /*rtl*/
 		color: #000;
-		margin-left: 5px;
+		margin-left: 5px;   /*rtl*/
 		padding: 0 5px;
 	}
 
 	.content-body a.external-link {
-		background: transparent url(@theme_image_path@/rtl/wiki/external.png) left top no-repeat;
+		background: transparent url(@theme_image_path@/rtl/wiki/external.png) left top no-repeat;   /*rtl*/
 		text-decoration: none;
-		padding-left: 10px;
+		padding-left: 10px;   /*rtl*/
 	}
 
 	.content-body a.external-link:hover {
-		background: transparent url(@theme_image_path@/rtl/wiki/external.png) left top no-repeat;
+		background: transparent url(@theme_image_path@/rtl/wiki/external.png) left top no-repeat;   /*rtl*/
 		text-decoration: underline;
-		padding-left: 11px;
+		padding-left: 11px;   /*rtl*/
 	}
 
 	.history-navigation .central-info a.change-mode {
@@ -172,16 +172,16 @@
 	}
 
 	.history-navigation .central-info {
-		float: right;
-		padding-right: 10px;
-		padding-left: 10px;
+		float: right;   /*rtl*/
+		padding-right: 10px;   /*rtl*/
+		padding-left: 10px;   /*rtl*/
 		text-align: center;
 		width: 66%;
 	}
 
 	.history-navigation .central-title {
 		font-weight: bold;
-		padding-left: 20px;
+		padding-left: 20px;   /*rtl*/
 	}
 
 	.history-navigation .central-username {
@@ -191,14 +191,14 @@
 	.history-navigation .next {
 		background-image: url(@theme_image_path@/rtl/arrows/paging_next.png);
 		background-position: 100% 0;
-		float: left;
-		padding-left: 15px;
+		float: left;   /*rtl*/
+		padding-left: 15px;   /*rtl*/
 	}
 
 	.history-navigation .previous {
 		background-image: url(@theme_image_path@/rtl/arrows/paging_previous.png);
-		float: right;
-		padding-right: 15px;
+		float: right;   /*rtl*/
+		padding-right: 15px;   /*rtl*/
 	}
 
 	.history-navigation a, .history-navigation span {
@@ -210,7 +210,7 @@
 	}
 
 	.history-navigation span.previous {
-		background-position: right 100%   /*rtl*/
+		background-position: 0 100%;
 	}
 
 	.history-navigation {
@@ -231,10 +231,10 @@
 	}
 
 	.page-actions .article-actions {
-		border-left: 1px solid #999;
-		float: right;
-		margin-left: 10px;
-		padding-left: 10px;
+		border-left: 1px solid #999;   /*rtl*/
+		float: right;   /*rtl*/
+		margin-left: 10px;   /*rtl*/
+		padding-left: 10px;   /*rtl*/
 	}
 
 	.page-actions .stats {
@@ -243,11 +243,11 @@
 
 	.page-actions.top-actions {
 		margin-top: 0;
-		text-align: left;
+		text-align: left;   /*rtl*/
 	}
 
 	.page-actions.top-actions img {
-		margin-right: 5px;
+		margin-right: 5px;   /*rtl*/
 	}
 
 	.entry-links h2 {
@@ -262,8 +262,8 @@
 
 	.page-info tr th, .page-info tr td {
 		border: 1px solid #ccc;
-		border-right: none;
-		border-left: none;
+		border-right: none;   /*rtl*/
+		border-left: none;   /*rtl*/
 		padding: 0.3em 1em;
 	}
 
@@ -295,12 +295,12 @@
 	}
 
 	.popup-print {
-		float: left;
+		float: left;   /*rtl*/
 	}
 
 	.syntax-help-content {
 		border: 1px dotted gray;
-		padding-right: 10px;
+		padding-right: 10px;   /*rtl*/
 	}
 
 	.syntax-help h4 {
@@ -308,7 +308,7 @@
 	}
 
 	.syntax-help pre {
-		margin-right: 1em;
+		margin-right: 1em;   /*rtl*/
 		margin-bottom: 1em;
 	}
 
@@ -318,17 +318,17 @@
 
 	.top-links-nodes {
 		border: 1px solid #ddd;
-		float: right;
+		float: right;   /*rtl*/
 		list-style-type: none;
 		margin: 0 0.5em 0.5em;
 		padding: 0.2em 0.5em;
 
 		.top-link-node {
-			border-left: 1px solid #aaa;
+			border-left: 1px solid #aaa;   /*rtl*/
 			display: inline-block;
 			list-style-type: none;
 			margin: 0.3em;
-			padding-left: 0.2em;
+			padding-left: 0.2em;   /*rtl*/
 
 			&.last {
 				border-width: 0;
@@ -337,17 +337,17 @@
 	}
 
 	.top-links .page-search {
-		float: left;
-		margin: 0 0 0.5em 0.5em;
+		float: left;   /*rtl*/
+		margin: 0 0.5em 0.5em 0;   /*rtl*/
 	}
 
 	.top-links-configuration {
-		float: right;
+		float: right;   /*rtl*/
 	}
 
 	.subscription-info tr td {
 		border: none;
-		padding: 0.1em 10px 0.1em 0;
+		padding: 0.1em 0 0.1em 10px;   /*rtl*/
 	}
 
 	#wikiCommentsPanelContainer {
